added edit profile endpoint
